[tool.poetry]
name = "linkedin_lookup"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10"
flask = "^3.0.0"
gunicorn = "^21.2.0"
langchain = "^0.3.20"
langchain-core = "^0.3.45"
langchain-community = "^0.3.19"
langchain-openai = "^0.3.8"
streamlit = "^1.43.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["linkedin_lookup", "tests"]
ignore_missing_imports = true
